--- a/index.html
+++ b/index.html
@@ -239,7 +239,44 @@
                         </div>
                     </div>                        
                     <!-- End of record -->                    
-
+                    <!-- one record -->
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 btn-card vertical-line-right">                                                                
+                        <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 border-none">                                                                                         
+                            <img class="img-responsive img-circle" src="img/profile/channy.jpg" alt="">                            
+                        </div>    
+                        <div class="col-lg-10 col-md-10  col-sm-10 col-xs-10 border-none">
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-left">                                  
+                                <h4 class="mag-10px text-name-card">Sok Channy</h4>
+                                <h6 class="mag-10px text-skill-card">Software developer</h6>                                                                     
+                            </div>
+                            <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 text-left pad-2px border-none">                                                                      
+                                <h6 class="mag-10px text-muted text-right">2 years experience</h6>
+                                <h6 class="mag-10px text-muted text-right">360$</h6>                                    
+                            </div>                                                            
+                        </div>
+                        <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 text-center border-none">                                
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 detail-card border-none">
+                                <i class="btn fa fa-reorder fa-1x"></i>
+                            </div>                             
+                        </div>
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 border-none text-right">
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-left pad-2px">
+                                <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+                                    <a href="#"><i class="fa fa-thumbs-up fa-1x"></i></a>                                    
+                                </div>                                    
+                                <div class="col-lg-1 col-md-2 co2-sm-2 col-xs-2 text-center pad-2px">
+                                    <i class="fa fa-male"></i>
+                                </div>
+                                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 text-center pad-2px">
+                                    <i class="fa fa-birthday-cake"> 23</i>
+                                </div>                                        
+                                <div class="col-lg-8 col-md-7 col-sm-7 col-xs-7">
+                                    <i class="glyphicon glyphicon-map-marker"> Phom Penh</i>
+                                </div>
+                            </div>                                                                            
+                        </div>
+                    </div>                        
+                    <!-- End of record -->
 
 
                     <!--                    <div class="col-lg-4"> 
